force-app/main/default/objects/List_Setting__c/List_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>List Setting</label>
</CustomObject>