force-app/main/default/objects/List_Setting__c/fields/ImagesOnTargetOrg__c.field-meta.xml
<CustomField>
    <fullName>ImagesOnTargetOrg__c</fullName>
    <label>ImagesOnTargetOrg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>