force-app/main/default/objects/List_Setting__c/fields/Link_to_connected_org__c.field-meta.xml
<CustomField>
    <fullName>Link_to_connected_org__c</fullName>
    <label>Link to connected org</label>
    <required>true</required>
    <type>Url</type>
</CustomField>