force-app/main/default/objects/List_Setting__c/fields/Login_c__c.field-meta.xml
<CustomField>
    <fullName>Login_c__c</fullName>
    <label>Login__c</label>
    <required>true</required>
    <type>Email</type>
</CustomField>