force-app/main/default/objects/List_Setting__c/fields/queryLink__c.field-meta.xml
<CustomField>
    <fullName>queryLink__c</fullName>
    <label>queryLink</label>
    <length>250</length>
    <type>Text</type>
</CustomField>