force-app/main/default/objects/List_Setting__c/fields/RecordsCountOnTargetOrg__c.field-meta.xml
<CustomField>
    <fullName>RecordsCountOnTargetOrg__c</fullName>
    <label>RecordsCountOnTargetOrg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>