force-app/main/default/objects/List_Setting__c/fields/tokenLink__c.field-meta.xml
<CustomField>
    <fullName>tokenLink__c</fullName>
    <label>tokenLink</label>
    <length>150</length>
    <type>Text</type>
</CustomField>